<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialogHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_header_activo"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgIcono"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/imgIcono_done"
            android:src="@drawable/ic_done_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#fff" />

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/titular_vigente"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/imgIcono"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtSubtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            tools:text="Vigente hasta el 28/02/2021"
            android:textColor="#fff"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/imgIcono"
            app:layout_constraintTop_toBottomOf="@id/txtTitulo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imgObraSocial"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogHeader" />

    <TextView
        android:id="@+id/tvGremio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#333"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogHeader"
        tools:text="CATAM" />

    <TextView
        android:id="@+id/tvEstado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#333"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGremio"
        tools:text="ESTADO" />

    <TextView
        android:id="@+id/tvDni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#333"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEstado"
        tools:text="DNI 12345678" />

    <TextView
        android:id="@+id/tvApellidoNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#333"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDni"
        tools:text="Apellido y Nombre" />
    <ImageView
        android:id="@+id/imgQrCode"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvApellidoNombre"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOk"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/btnOk"
        android:textColor="@color/colorVerde"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgQrCode" />

</androidx.constraintlayout.widget.ConstraintLayout>